@@ -114,6 +114,8 @@ Version 1.7.8
        after "next 100". (Stefan)
 - BUG: Issue #388: Wrong/duplicate info in the
        explorer Subversion properties tab. (Stefan)
+- BUG: Issue #389: Blame using the wrong pegrev.
+       (Stefan Fuhrmann)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
